# xact

./: .envrc  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  xact.sublime-project
cmake/: BuildType.cmake  CompilerFlags.cmake  Logging.cmake
docs/: api.md  performance.md  tsx_background.md
docs/api/: AtomicU64.md  generalized_cas.md  n_way.md
examples/: atomic_cas_reader_writer.cpp
include/xact/: AlignedBox.h  AtomicU64.h  FixedAtomicU64Group.h  IntegralCASParams.h  LockableAtomicU64.h  TransactionExecutor.h  TransactionStatus.h  XAtomic.h  cas_ops.h  fence.h  macros.h
include/xact/asm/: core.h
include/xact/atomic_ops/: MultiOps.h  multi.h  single.h
include/xact/detail/: AlignedBox.h  LockManager.h  NamedType.h  RWSeqLock.h  SmallVector.h  fence.h  macros.h  named_types.h  traits.h
include/xact/detail/asm/: generalized_cas.h  lockable_atomic_u64.h  lockable_atomic_u64_ops.h  multi.h  multi_ops.h  rw_seqlock.h  rw_seqlock_ops.h  tests.h  util.h
include/xact/detail/backoff/: ExponentialBackoff.h  XorShiftEngine.h
include/xact/detail/util/: PThreadSpinLock.h  ScopeGuard.h  UniqueToken.h  util.h
include/xact/generalized_cas/: ArrayStoragePolicy.h  ExceptionErrorPolicy.h  GeneralizedCAS.h  GeneralizedCASExecutor.h  GeneralizedCASOp.h  Operation.h  Precondition.h  VectorStoragePolicy.h
include/xact/generalized_cas_1/: ExceptionErrorPolicy.h  GeneralizedCAS.h  GeneralizedCASOp.h  Operation.h  Precondition.h  VectorStoragePolicy.h
include/xact/multi/: MultiLoad.h  MultiTransaction.h
include/xact/single/: SingleTransaction.h
include/xact/util/: PThreadSpinLock.h  ScopeGuard.h  UniqueToken.h  util.h
include/xact_asm/: core.h
scripts/: common.sh  deps.sh
src/: run_benchmarks.cpp
src/bench/: CMakeLists.txt  micro_benchmarks.cpp  run_benchmarks.cpp  spinlock_comparison.cpp
src/bench/micro/: bench_SmallVector.cpp  bench_backoff.cpp  bench_mini_gencas.cpp  bench_multi.cpp  bench_seqlock.cpp  bench_single_ops.cpp  micro_benchmarks.cpp
src/profiling/: CMakeLists.txt  prof_multi.cpp
src/scratch/: CMakeLists.txt  main.cpp
src/test/: CMakeLists.txt  run_tests.cpp  test_cas_ops.cpp
src/test/include/xact_testing/: ThreadGroup.h
src/test/unit/: test_AtomicU64.cpp  test_FixedAtomicU64Group.cpp  test_GeneralizedCAS.cpp  test_LockableAtomicU64.cpp  test_SmallVector.cpp  test_atomic_ops_multi.cpp  test_atomic_ops_single.cpp
src/test/unit/detail/: test_RWSeqLock.cpp  test_asm_sanity.cpp
src/test/unit/detail/backoff/: test_ExponentialBackoff.cpp
src/test/unit/detail/util/: test_PThreadSpinLock.cpp
src/test/unit/generalized_cas/: test_GeneralizedCAS.cpp
src/test/unit/generalized_cas_1/: test_GeneralizedCAS.cpp
src/test/unit/multi/: test_MultiTransaction.cpp
src/test/unit/tsx/: test_tsx_assumptions.cpp
src/test/unit/util/: test_PThreadSpinLock.cpp
src/xact/: AtomicU64.cpp  CMakeLists.txt  LockableAtomicU64.cpp  TransactionStatus.cpp  cas_ops.cpp  fence.cpp
src/xact/asm/: core.asm
src/xact/atomic_ops/: multi.cpp  single.cpp
src/xact/detail/: fence.cpp
src/xact/detail/util/: PThreadSpinLock.cpp  ScopeGuard.cpp  UniqueToken.cpp
src/xact/generalized_cas/: ExceptionErrorPolicy.cpp  GeneralizedCAS.cpp  GeneralizedCASOp.cpp  Operation.cpp  Precondition.cpp  VectorStoragePolicy.cpp
src/xact/generalized_cas_1/: ExceptionErrorPolicy.cpp  GeneralizedCAS.cpp  GeneralizedCASOp.cpp  Operation.cpp  Precondition.cpp  VectorStoragePolicy.cpp
src/xact/util/: PThreadSpinLock.cpp  ScopeGuard.cpp  UniqueToken.cpp
src/xact_asm/: CMakeLists.txt  atomic_u64_multi.asm  atomic_u64_single.asm  generalized_cas.asm  generalized_cas_dtypes.asm  lockable_atomic_u64.asm  lockable_atomic_u64_retired.asm  mem_barriers.asm  multi.asm  rw_seqlock.asm  rw_seqlock_macros.asm  sanity_check.asm  util.asm
src/xact_asm/common/: misc_macros.asm  tsx_defs.asm
src/xact_asm/generalized_cas/: core_impl_v1.asm  core_impl_v2.asm  core_v1.asm  core_v2.asm  macros.asm  retry.asm
src/xact_asm/lockable_atomic_u64/: core.asm  retired.asm
src/xact_asm/misc/: sanity_check.asm  tsx_tests.asm
src/xact_asm/multi/: core.asm  dtypes.asm
src/xact_asm/rw_seqlock/: core.asm  dtypes.asm  macros.asm
